# KuiperCourse

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_cu.cu  update_vpn.sh  vpn.sh
.github/workflows/: benchmark.yaml  c-cpp.yml  c-cpp_ci_cd.yml  c-cpp_test.yml  up_subscription.yml  vpn.yml
benchmark/: CMakeLists.txt  benchmark_main.cpp  benchmark_resnet18.cpp
include/: status_code.h
include/data/: load_data.hpp  tensor.hpp
include/factory/: layer_factory.hpp  operator_factory.h  transform_factory.h
include/helper/: cuda_helper.cu
include/layer/: adaptiveAvgPooling_layer.h  adaptiveMaxPooling_layer.h  avgPooling_layer.h  batchNorm_layer.h  cat_layer.h  convolution_layer.h  expression_layer.h  flatten_layer.h  hardSigmoid_layer.h  hardSwish_layer.h  layer.h  layer_layer.h  leakyRelu_layer.h  linear_layer.h  maxPooling_layer.h  relu6_layer.h  relu_layer.h  sigmoid_layer.h  silu_layer.h  softMax_layer.h  upSample_layer.h  view_layer.h
include/ops/: adaptiveAvgPooling_op.h  adaptiveMaxPooling_op.h  avgPooling_op.h  batchNorm_op.h  cat_op.h  convolution_op.h  expression_op.h  flatten_op.h  hardSigmoid_op.h  hardSwish_op.h  input_op.h  leakyRelu_op.h  linear_op.h  maxPooling_op.h  ops.h  output_op.h  relu6_op.h  relu_op.h  runtime_op.h  sigmoid_op.h  silu_op.h  softMax_op.h  upSample_op.h  view_op.h
include/parser/: parse_expression.h
include/runtime/: ir.h  runtime_attr.h  runtime_datatype.h  runtime_ir.h  runtime_op.h  runtime_operand.h  runtime_parameter.h  store_zip.h
include/transform/: normalize.h
source/cuda/: adaptiveAvgPooling_layer.cu  adaptiveMaxPooling_layer.cu  avgPooling_layer.cu  batchNorm_layer.cu  cat_layer.cu  convolution_layer.cu  expression_layer.cu  flatten_layer.cu  hardSigmoid_layer.cu  hardSwish_layer.cu  leakyRelu_layer.cu  linear_layer.cu  maxPooling_layer.cu  relu_layer.cu  rely6_layer.cu  sigmoid_layer.cu  silu_layer.cu  softMax_layer.cu  upSample_layer.cu  view_layer.cu
source/data/: load_data.cpp  tensor.cpp
source/factory/: layer_factory.cpp  operator_factory.cpp  transform_factory.cpp
source/layer/: adaptiveAvgPooling_layer.cpp  adaptiveMaxPooling_layer.cpp  avgPooling_layer.cpp  batchNorm_layer.cpp  cat_layer.cpp  convolution_layer.cpp  expression_layer.cpp  flatten_layer.cpp  hardSigmoid_layer.cpp  hardSwish_layer.cpp  layer.cpp  leakyRelu_layer.cpp  linear_layer.cpp  maxPooling_layer.cpp  relu6_layer.cpp  relu_layer.cpp  sigmoid_layer.cpp  silu_layer.cpp  softMax_layer.cpp  upSample_layer.cpp  view_layer.cpp
source/ops/: adaptiveAvgPooling_op.cpp  adaptiveMaxPooling_op.cpp  avgPooling_op.cpp  batchNorm_op.cpp  cat_op.cpp  convolution_op.cpp  expression_op.cpp  flatten_op.cpp  hardSigmoid_op.cpp  hardSwish_op.cpp  input_op.cpp  leakyRelu_op.cpp  linear_op.cpp  maxPooling_op.cpp  op.cpp  output_op.cpp  relu6_op.cpp  relu_op.cpp  runtime_op.cpp  sigmoid_op.cpp  silu_op.cpp  softMax_op.cpp  upSample_op.cpp  view_op.cpp
source/parser/: parse_expression.cpp
source/runtime/: ir.cpp  runtime_ir.cpp  store_zip.cpp
source/transform/: normalize.cpp
test/: CMakeLists.txt  test_HardSigmoid.cpp  test_adaptiveAvgPooling.cpp  test_adaptiveMaxPooling.cpp  test_avgPooling.cpp  test_batchNorm.cpp  test_cat.cpp  test_convolution.cpp  test_first.cpp  test_flatten.cpp  test_forward.cpp  test_hardSigmoid.cpp  test_hardSwish.cpp  test_init_input_output.cpp  test_leakRelu.cpp  test_linear.cpp  test_load_data.cpp  test_main.cpp  test_maxPooling.cpp  test_relu.cpp  test_relu6.cpp  test_resnet18.cpp  test_runtime.cpp  test_sigmoid.cpp  test_silu.cpp  test_softMax.cpp  test_upSample.cpp
test/test_datas/: test_first.cpp  test_load_data.cpp  test_tensor.cpp
test/test_layers/: test_adaptiveAvgPooling.cpp  test_adaptiveMaxPooling.cpp  test_avgPooling.cpp  test_batchNorm.cpp  test_cat.cpp  test_convolution.cpp  test_expression.cpp  test_flatten.cpp  test_forward.cpp  test_hardSigmoid.cpp  test_hardSwish.cpp  test_init_input_output.cpp  test_leakRelu.cpp  test_linear.cpp  test_maxPooling.cpp  test_relu.cpp  test_relu6.cpp  test_sigmoid.cpp  test_silu.cpp  test_softMax.cpp  test_upSample.cpp  test_view.cpp
test/test_models/: test_resnet18.cpp
test/test_transforms/: test_normalize_transform.cpp
tmp/: resnet18_hub.pnnx.param  test.pnnx.param
