find_package(GTest REQUIRED)
find_package(OpenMP REQUIRED)
aux_source_directory(../test DIR_TEST)
set(link_lib glog gtest pthread)
set(link_math_lib armadillo blas lapack)

aux_source_directory(../source/data DIR_DATA)
aux_source_directory(../source/layer DIR_LAYER)
aux_source_directory(../source/factory DIR_FACTORY)
aux_source_directory(../source/ops DIR_OPS)
aux_source_directory(../source/runtime DIR_RUNTIME)
aux_source_directory(../source/parser DIR_PARSER)
aux_source_directory(../source/transform DIR_TRANSFORM)

#find_package(OpenCV REQUIRED)
#message(STATUS "OpenCV library status:")
#message(STATUS "    version: ${OpenCV_VERSION}")
#message(STATUS "    libraries: ${OpenCV_LIBS}")
#message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
add_executable(test_kuiper_course ${DIR_TEST} ${DIR_DATA} ${DIR_LAYER} ${DIR_FACTORY} ${DIR_OPS} ${DIR_RUNTIME} ${DIR_PARSER} ${DIR_TRANSFORM})

link_directories(/usr/local/lib/)
#target_link_libraries(test_kuiper_course ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX ${OpenCV_LIBS})
target_link_libraries(test_kuiper_course ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
