find_package(GTest REQUIRED)
find_package(OpenMP REQUIRED)
find_package(OpenCV REQUIRED)
aux_source_directory(../test DIR_TEST)
aux_source_directory(../test/test_layers DIR_TEST_LAYERS)
aux_source_directory(../test/test_transforms DIR_TEST_TRANSFORMS)
aux_source_directory(../test/test_datas DIR_TEST_DATAS)
aux_source_directory(../test/test_models DIR_TEST_MODELS)
set(link_lib glog gtest pthread)
set(link_math_lib armadillo blas lapack)

aux_source_directory(../source/data DIR_DATA)
aux_source_directory(../source/layer DIR_LAYER)
aux_source_directory(../source/factory DIR_FACTORY)
aux_source_directory(../source/ops DIR_OPS)
aux_source_directory(../source/runtime DIR_RUNTIME)
aux_source_directory(../source/parser DIR_PARSER)
aux_source_directory(../source/transform DIR_TRANSFORM)


include_directories(${OpenCV_INCLUDE_DIRS})
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
add_executable(test_kuiper_course ${DIR_TEST} ${DIR_TEST_LAYERS} ${DIR_TEST_TRANSFORMS} ${DIR_TEST_DATAS} ${DIR_TEST_MODELS}
        ${DIR_DATA} ${DIR_LAYER} ${DIR_RUNTIME} ${DIR_FACTORY} ${DIR_OPS} ${DIR_PARSER} ${DIR_TRANSFORM})

link_directories(/usr/local/lib/)
target_link_libraries(test_kuiper_course ${OpenCV_LIBS} ${link_lib} ${link_math_lib} OpenMP::OpenMP_CXX)
